# CertChain

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/backend/: .env.example  package-lock.json  package.json
apps/backend/src/: app.module.ts  main.ts
apps/backend/src/ipfs/: ipfs.module.ts  ipfs.service.ts
apps/backend/src/modules/auth/: auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts  jwt.strategy.ts  roles.guard.ts
apps/backend/src/modules/credentials/: bulk-issue.processor.ts  credentials.controller.ts  credentials.module.ts  (+1 more)
apps/backend/src/stellar/: soroban.service.ts  stellar.module.ts  stellar.service.ts
apps/backend/test/__mocks__/: kubo-rpc-client.js
apps/frontend/: angular.json  package-lock.json  package.json  vercel.json
apps/frontend/src/: index.html  styles.css
apps/frontend/src/app/: app.component.ts  app.config.ts  app.routes.ts
apps/frontend/src/environments/: environment.prod.ts  environment.ts
contracts/: Cargo.toml
contracts/batch-issuer/: Cargo.toml
contracts/batch-issuer/src/: lib.rs
contracts/credential-token/: Cargo.toml
contracts/credential-token/src/: lib.rs
contracts/institution-registry/: Cargo.toml
contracts/institution-registry/src/: lib.rs
contracts/revocation-registry/: Cargo.toml
contracts/revocation-registry/src/: lib.rs
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
docs/: architecture.md
(+29 files in other folders)
