[workspace]
members = [
    "institution-registry",
    "credential-token",
    "revocation-registry",
    "batch-issuer",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "21.7.7" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
